# convert_html_md

./: .gitignore  .pre-commit-config.yaml  README.md  bin_txt.py  convert.py  example.html  justfile  pyproject.toml  requirements.txt
jupyter/: requirements.txt
notes/EzzEddin Example/: example.html
