[tool.poetry]
name = "convert-html-md"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "convert_html_md"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.1"
colorama = "^0.4.6"
pathvalidate = "^2.5.2"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
